# nix-channelstatus

./: .gitignore  .travis.yml  LICENSE  README.md  nix-channelstatus.cabal  pkgs.nix  stack.yaml
backend/: default.nix  nix-channelstatus.cabal
backend/gen-elm/: Main.hs
backend/serve-channelstatus/: Main.hs
backend/src/ChannelStatus/: API.hs  Database.hs  DatabaseExtra.hs  IndexFiles.hs  JSON.hs  Query.hs  Server.hs
backend/test/: JSONSpec.hs
frontend/: default.nix  elm-package.json  package.json
frontend/src/: Main.elm  Models.elm  Msg.elm  Update.elm  View.elm  index.html  index.js
index-channels/: Main.hs
scripts/: createdb.sh  schema.sql
serve-channelstatus/: Main.hs
src/ChannelStatus/: API.hs  Database.hs  DatabaseExtra.hs  IndexFiles.hs  JSON.hs  Query.hs  Server.hs
